# ML_JIT

./: .gitattributes  .prompt_codex_r2.md  .prompt_phase1.md  .prompt_phase2.md  Back to Basics_ Let Denoising Generative Models Denoise - JiT模型复现与改进实验.pptx  README.md  pyproject.toml  格式要求.md
docs/: CODEX_REVIEW.md  CROSS_REVIEW_CODEX_ON_HERMES.md  CROSS_REVIEW_FINAL.md  CROSS_REVIEW_HERMES_ON_CODEX.md  PROPOSALS_ROUND2_CODEX.md  PROPOSALS_ROUND2_HERMES.md  REPRODUCTION_REPORT_CN.md  RESEARCH_PROPOSAL.md
scripts/: 00_download_imagenet_subset.sh  01_train_baseline.sh  02_train_snp.sh  03_train_tctm.sh  generate.py  prepare_subset.py  train.py
src/jit_repro/: __init__.py  config.py  denoiser.py  diffusion.py  model.py  sampling.py  utils.py
