[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jit-repro"
version = "0.1.0"
description = "JiT (Just image Transformer) reproduction - denoising generative models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=2.5",
    "numpy",
    "opencv-python",
    "torchvision",
    "tensorboard",
    "einops",
    "timm",
    "torch-fidelity",
]

[project.scripts]
jit-train = "scripts.train:main"
jit-generate = "scripts.generate:main"

[tool.setuptools.packages.find]
where = ["src"]
